<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white">


    <ScrollView
        android:visibility="visible"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/rectangle_rounded_corner_with_border">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/register"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:drawablePadding="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:drawablePadding="10dp"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:drawablePadding="10dp"
                    android:maxLength="10"
                    android:inputType="number"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/rectangle_rounded_corner_with_border">
                <com.rppatil.inceptivetech.common.CustomSearchableSpinner
                    android:id="@+id/spn_state"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/state"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/rectangle_rounded_corner_with_border">
                <com.rppatil.inceptivetech.common.CustomSearchableSpinner
                    android:id="@+id/spn_district"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/state"
                    />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/btn_submit"
                android:layout_margin="10dp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_alignParentBottom="true"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>